snakemake bug fix

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "133d92fb",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
     "        \"LB\": \"Pt28N\"\n",
     "    }\n",
     "})\n",
-    "mapper_tumor = Mapper(library=\"bwa\", reads=tumor_files, params={\n",
+    "mapper_tumor = Mapper(library=\"bowtie\", reads=tumor_files, params={\n",
     "    \"read_groups\": {\n",
     "        \"ID\": \"S13\",\n",
     "        \"SM\": \"S13\",\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "09b03958",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "7484f8ac",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "efb83e40",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "8493a45a",
    "metadata": {},
    "outputs": [],
@@ -118,29 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "8826a288",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "snakemake -s /home/mae/Desktop/cosap/cosap/snakemake_workflows/Snakefile             --configfile /home/mae/Desktop/pipeline_reproduce/config.yaml --dag -n | dot -Tsvg > /home/mae/Desktop/pipeline_reproduce/workflow_dag.svg\n"
-     ]
-    }
-   ],
-   "source": [
-    "runner.run_pipeline_snakemake(pipeline_config=pipeline_config, output_dir = \"/home/mae/Desktop/pipeline_reproduce/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04c2f087",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "runner.run_pipeline_snakemake(pipeline_config=pipeline_config, output_dir = \"/media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/\")"
+   ]
   }
  ],
  "metadata": {
