--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "133d92fb",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "09b03958",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "7484f8ac",
    "metadata": {},
    "outputs": [],
@@ -98,12 +98,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "efb83e40",
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline_config = pipeline.build()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e00ea8cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'library_path': '/home/mae/Desktop/hg38_bundle',\n",
+       " 'creation-date': '2021-09-09 18:04:57',\n",
+       " 'version': '0.0.1',\n",
+       " 'mapping': {'D791': {'library': 'bwa',\n",
+       "   'input': {'1': '/media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz',\n",
+       "    '2': '/media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz'},\n",
+       "   'output': 'D791_bwa.bam',\n",
+       "   'params': {'read_groups': {'ID': 'Pt28N',\n",
+       "     'SM': 'Pt28N',\n",
+       "     'PU': '0',\n",
+       "     'PL': 'illumina',\n",
+       "     'LB': 'Pt28N'}}},\n",
+       "  '1DC8': {'library': 'bowtie',\n",
+       "   'input': {'1': '/media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_1.fastq.gz',\n",
+       "    '2': '/media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_2.fastq.gz'},\n",
+       "   'output': '1DC8_bowtie.bam',\n",
+       "   'params': {'read_groups': {'ID': 'S13',\n",
+       "     'SM': 'S13',\n",
+       "     'PU': '0',\n",
+       "     'PL': 'illumina',\n",
+       "     'LB': 'S13'}}}},\n",
+       " 'sorting': {},\n",
+       " 'index': {},\n",
+       " 'merge': {},\n",
+       " 'calibrate': {},\n",
+       " 'variant-calling': {'1DC8_D791_mutect': {'library': 'mutect',\n",
+       "   'normal': 'D791',\n",
+       "   'tumor': '1DC8',\n",
+       "   'params': {},\n",
+       "   'output': 'snp_1DC8_D791_mutect.vcf'},\n",
+       "  '1DC8_D791_varscan': {'library': 'varscan',\n",
+       "   'normal': 'D791',\n",
+       "   'tumor': '1DC8',\n",
+       "   'params': {},\n",
+       "   'output': 'snp_1DC8_D791_varscan.vcf'}}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline_config"
    ]
   },
   {
@@ -123,13 +178,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runner.run_pipeline_snakemake(pipeline_config=pipeline_config, output_dir = \"/media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/\")"
+    "runner.run_pipeline_snakemake(pipeline_config=pipeline_config,\n",
+    "                              output_dir = \"/media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
