Snakemake cosap integration

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -19,8 +19,9 @@
    ],
    "source": [
     "import json\n",
-    "from cosap import Pipeline, FastqReader, Mapper, VariantCaller, version, PipelineRunner\n",
+    "from cosap import Pipeline, FastqReader, Mapper, VariantCaller, version, PipelineRunner, MDUP,Recalibrator\n",
     "from cosap import VarScanVariantCaller\n",
+    "import yaml\n",
     "version"
    ]
   },
@@ -58,7 +59,7 @@
     "        \"LB\": \"Pt28N\"\n",
     "    }\n",
     "})\n",
-    "mapper_tumor = Mapper(library=\"bowtie\", reads=tumor_files, params={\n",
+    "mapper_tumor = Mapper(library=\"bwa\", reads=tumor_files, params={\n",
     "    \"read_groups\": {\n",
     "        \"ID\": \"S13\",\n",
     "        \"SM\": \"S13\",\n",
@@ -72,17 +73,39 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "09b03958",
+   "id": "33785352",
    "metadata": {},
    "outputs": [],
    "source": [
-    "caller1 = VariantCaller(library=\"mutect\", germline=mapper_germline, tumor=mapper_tumor, params={})\n",
-    "caller2 = VariantCaller(library=\"varscan\", germline=mapper_germline, tumor=mapper_tumor, params={})"
+    "mdup_germline = MDUP(input_step=mapper_germline)\n",
+    "mdup_tumor = MDUP(input_step=mapper_tumor)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "347380d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_racalibrator_germline = Recalibrator(input_step=mdup_germline)\n",
+    "base_racalibrator_tumor = Recalibrator(input_step=mdup_tumor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "09b03958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caller1 = VariantCaller(library=\"mutect\", germline=base_racalibrator_germline, tumor=base_racalibrator_tumor, params={})\n",
+    "caller2 = VariantCaller(library=\"varscan\", germline=base_racalibrator_germline, tumor=base_racalibrator_tumor, params={})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "7484f8ac",
    "metadata": {},
    "outputs": [],
@@ -91,6 +114,10 @@
     "    Pipeline()\n",
     "    .add(mapper_germline)\n",
     "    .add(mapper_tumor)\n",
+    "    .add(mdup_germline)\n",
+    "    .add(mdup_tumor)\n",
+    "    .add(base_racalibrator_germline)\n",
+    "    .add(base_racalibrator_tumor)\n",
     "    .add(caller1)\n",
     "    .add(caller2)\n",
     ")"
@@ -98,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "efb83e40",
    "metadata": {},
    "outputs": [],
@@ -108,29 +135,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e00ea8cd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pipeline_config[\"workdir\"] = \"/media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5805a133",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'library_path': '/home/mae/Desktop/hg38_bundle',\n",
-       " 'creation-date': '2021-09-09 18:04:57',\n",
+       " 'creation-date': '2021-09-11 16:47:16',\n",
        " 'version': '0.0.1',\n",
-       " 'mapping': {'D791': {'library': 'bwa',\n",
+       " 'mapping': {'9870': {'library': 'bwa',\n",
        "   'input': {'1': '/media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz',\n",
        "    '2': '/media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz'},\n",
-       "   'output': 'D791_bwa.bam',\n",
+       "   'output': 'unprocessed_9870.bam',\n",
        "   'params': {'read_groups': {'ID': 'Pt28N',\n",
        "     'SM': 'Pt28N',\n",
        "     'PU': '0',\n",
        "     'PL': 'illumina',\n",
        "     'LB': 'Pt28N'}}},\n",
-       "  '1DC8': {'library': 'bowtie',\n",
+       "  '00B3': {'library': 'bwa',\n",
        "   'input': {'1': '/media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_1.fastq.gz',\n",
        "    '2': '/media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_2.fastq.gz'},\n",
-       "   'output': '1DC8_bowtie.bam',\n",
+       "   'output': 'unprocessed_00B3.bam',\n",
        "   'params': {'read_groups': {'ID': 'S13',\n",
        "     'SM': 'S13',\n",
        "     'PU': '0',\n",
@@ -139,20 +178,44 @@
        " 'sorting': {},\n",
        " 'index': {},\n",
        " 'merge': {},\n",
-       " 'calibrate': {},\n",
-       " 'variant-calling': {'1DC8_D791_mutect': {'library': 'mutect',\n",
-       "   'normal': 'D791',\n",
-       "   'tumor': '1DC8',\n",
-       "   'params': {},\n",
-       "   'output': 'snp_1DC8_D791_mutect.vcf'},\n",
-       "  '1DC8_D791_varscan': {'library': 'varscan',\n",
-       "   'normal': 'D791',\n",
-       "   'tumor': '1DC8',\n",
-       "   'params': {},\n",
-       "   'output': 'snp_1DC8_D791_varscan.vcf'}}}"
+       " 'mdup': {'9870': {'input': 'unprocessed_9870.bam', 'output': 'mdup_9870.bam'},\n",
+       "  '00B3': {'input': 'unprocessed_00B3.bam', 'output': 'mdup_00B3.bam'}},\n",
+       " 'calibrate': {'9870': {'input': 'mdup_9870.bam',\n",
+       "   'table': 'calibration_table_9870.table',\n",
+       "   'output': 'calibrated_9870.bam'},\n",
+       "  '00B3': {'input': 'mdup_00B3.bam',\n",
+       "   'table': 'calibration_table_00B3.table',\n",
+       "   'output': 'calibrated_00B3.bam'}},\n",
+       " 'variant-calling': {'9870_00B3_mutect': {'library': 'mutect',\n",
+       "   'normal_input': 'calibrated_9870.bam',\n",
+       "   'tumor_input': 'calibrated_00B3.bam',\n",
+       "   'params': {'germline_sample_naeme': 'normal_sample',\n",
+       "    'tumor_sample_name': 'tumor_sample'},\n",
+       "   'unfiltered_variants': 'all_9870_00B3.vcf',\n",
+       "   'snp_output': 'snp_9870_00B3.vcf',\n",
+       "   'indel_output': 'indel_9870_00B3.vcf',\n",
+       "   'other_variants_output': 'other_variants_9870_00B3.vcf'},\n",
+       "  '9870_00B3_varscan': {'library': 'varscan',\n",
+       "   'normal_input': 'calibrated_9870.bam',\n",
+       "   'tumor_input': 'calibrated_00B3.bam',\n",
+       "   'params': {'germline_sample_naeme': 'normal_sample',\n",
+       "    'tumor_sample_name': 'tumor_sample'},\n",
+       "   'unfiltered_variants': 'all_9870_00B3.vcf',\n",
+       "   'snp_output': 'snp_9870_00B3.vcf',\n",
+       "   'indel_output': 'indel_9870_00B3.vcf',\n",
+       "   'other_variants_output': 'other_variants_9870_00B3.vcf'}},\n",
+       " 'final-output': ['unprocessed_9870.bam',\n",
+       "  'unprocessed_00B3.bam',\n",
+       "  'mdup_9870.bam',\n",
+       "  'mdup_00B3.bam',\n",
+       "  'calibrated_9870.bam',\n",
+       "  'calibrated_00B3.bam',\n",
+       "  'snp_9870_00B3.vcf',\n",
+       "  'snp_9870_00B3.vcf'],\n",
+       " 'workdir': '/media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
+   "id": "aa2c58e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/home/mae/Desktop/cosap/snakemake_workflows/config.yaml\", \"w\") as config_yaml:\n",
+    "            yaml.dump(pipeline_config, config_yaml, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8493a45a",
    "metadata": {},
    "outputs": [],
@@ -173,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8826a288",
    "metadata": {},
    "outputs": [],
